# glados

./: .clang-format  .gitignore  CMakeLists.txt
dwtools/: Sound_extensions.cpp
main/: festifuck.cpp  festifuck.h  main.cpp  main_Praat.cpp
melder/: melder_alloc.h  melder_debug.cpp  melder_int.h  melder_real.h
stat/: Table.cpp
sys/: Formula.cpp  Graphics_text.cpp  Interpreter.cpp  Picture.cpp  praat.cpp  praat_script.cpp
